@@ -9,6 +9,7 @@
 -- Resolve module dependencies
 -- Variable content substitution
 -- Action to create a soaf project
+-- Manage pid to determine if job already in progress
 
 [0.9.0]
 
